# comaps

./: .gitignore  CMakeLists.txt  TESTING_GUIDE.md  VALIDATION_REPORT.md
3party/: CMakeLists.txt
3party/protobuf/: CMakeLists.txt
3party/vulkan_wrapper/: CMakeLists.txt
android/app/: build.gradle
android/app/src/fdroid/play/: version.yaml
android/app/src/main/assets/: CoMaps_backup_250802.kmz  doc.kml  schools.kml  simple_test.kml  test_markers.json  test_markers.kml
android/app/src/main/assets/files/: My Places.kml  Satara places.kml
android/app/src/main/cpp/app/organicmaps/editor/: Editor.cpp
android/app/src/main/java/app/organicmaps/: ChartController.java  MwmActivity.java
android/app/src/main/java/app/organicmaps/base/: BaseMwmFragmentActivity.java
android/app/src/main/java/app/organicmaps/editor/: Editor.java  EditorFragment.java
android/app/src/main/java/app/organicmaps/location/: LocationHelper.java
android/app/src/main/java/app/organicmaps/maplayer/: MapButtonsController.java
android/app/src/main/java/app/organicmaps/routing/: BaseRoutingErrorDialogFragment.java  ManageRouteAdapter.java  NavigationController.java  RoutingBottomMenuController.java  RoutingErrorDialogFragment.java  RoutingPlanController.java
android/app/src/main/java/app/organicmaps/sdk/bookmarks/data/: BookmarkManager.java
android/app/src/main/java/app/organicmaps/sdk/location/: LocationHelper.java
android/app/src/main/java/app/organicmaps/sdk/routing/: TransitStepType.java
android/app/src/main/java/app/organicmaps/sdk/util/: Config.java
android/app/src/main/java/app/organicmaps/settings/: SettingsPrefsFragment.java
android/app/src/main/java/app/organicmaps/universalbuttons/: UniversalButton.java  UniversalButtonsHolder.java  UniversalToggleButton.java
android/app/src/main/java/app/organicmaps/util/: RemoteMarkersLoader.java  SimpleBookmarkCreator.java  TestMarkersLoader.java  Utils.java
android/app/src/main/java/app/organicmaps/widget/menu/: NavMenu.java
android/app/src/main/java/app/organicmaps/widget/placepage/: AxisValueFormatter.java  DirectionFragment.java  EditBookmarkFragment.java  PlacePageController.java  PlacePageView.java
android/app/src/main/res/drawable/: ic_route_planning_train_40px.xml
android/app/src/main/res/layout/: altitude_chart_panel.xml  fragment_editor.xml  layout_nav_bottom.xml  manage_route_bottom_sheet.xml  map_buttons_bottom.xml  map_buttons_kml_import.xml  map_buttons_simple_direct.xml  place_page_preview.xml  routing_plan.xml  start_button.xml
android/app/src/main/res/layout-land/: altitude_chart_panel.xml  map_buttons_bottom.xml
android/app/src/main/res/layout-w1020dp-land/: altitude_chart_panel.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml  prefs_main.xml
android/app/src/test/: My schools.kml
android/gradle/: libs.versions.toml
base/base_tests/: CMakeLists.txt
cmake/: OmimHelpers.cmake  OmimPlatform.cmake
data/: colors.txt  drules_proto.txt  drules_proto_default_dark.txt  drules_proto_default_light.txt  drules_proto_outdoors_dark.txt  drules_proto_outdoors_light.txt  patterns.txt
data/conf/isolines/: countries-to-generate.json  isolines-profiles.json
data/styles/default/dark/: colors.mapcss
data/styles/default/include/: Basemap.mapcss  Roads.mapcss  priorities_3_FG.prio.txt  priorities_4_overlays.prio.txt
data/styles/default/light/: colors.mapcss
data/styles/outdoors/include/: Basemap.mapcss  Roads.mapcss  priorities_3_FG.prio.txt  priorities_4_overlays.prio.txt
docs/: DEBUG_COMMANDS.md  INSTALL.md
drape/: CMakeLists.txt
indexer/: editable_map_object.cpp  editable_map_object.hpp
iphone/Maps/Maps.xcodeproj/: project.pbxproj
kml/: CMakeLists.txt
map/: CMakeLists.txt
platform/: CMakeLists.txt
routing/: CMakeLists.txt
search/: CMakeLists.txt
shaders/: CMakeLists.txt
tools/python/maps_generator/var/etc/: map_generator.ini.prod
tools/unix/: docker_maps_generator.sh
traffic/pytraffic/: CMakeLists.txt
transit/: CMakeLists.txt
